--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/chicken_salad.html">Tommy's Simple Chicken Salad</a>
     </body>
 
 </html>>
