Add jpeg to chicken_salad recipe and short description

--- a/recipes/chicken_salad.html
+++ b/recipes/chicken_salad.html
@@ -7,5 +7,14 @@
 
 <body>
     <h1>Tommy's Simple Chicken Salad</h1>
+    <img src="../pictures/chickensaladontoast.jpeg" alt="Creamy chicken salad atop a slice of lettuce that sits on a slice of whole grain bread">
+
+    <h3>Simple Chicken Salad for the health conscious</h3>
+    <p>If you're anything like Tommy, you're always thinking of creative ways to consume lots of protein in a tasty, healthy, yet frugal fashion.
+        This recipe doesn't require a whole lot, contains relatively cheap ingredients, and needs very little preparation. 
+        Despite that, a few key ingredients really make this chicken salad pop.
+        Personally, I like to put it between lettuce and whole grain bread.
+    </p>
+
 </body>
 </html>
