--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/chicken_salad.html">Tommy's Simple Chicken Salad</a>
+        <ul>
+            <li><a href="./recipes/chicken_salad.html">Tommy's Simple Chicken Salad</a></li>
+            <li><a href="./recipes/steak.html">Easy From Frozen Steak</a></li>
+        </ul>
     </body>
 
-</html>>
+</html>
