finished avocado_toast html, added hyperlink to index list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="./recipes/chicken_salad.html">Tommy's Simple Chicken Salad</a></li>
             <li><a href="./recipes/steak.html">Easy From Frozen Steak</a></li>
+            <li><a href="./recipes/avocado_toast.html">Don't roll your eyes at me Avocado Toast</a> </li>
         </ul>
     </body>
 
