--- a/recipes/avocado_toast.html
+++ b/recipes/avocado_toast.html
@@ -2,6 +2,37 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>avocado toast</title>
+        <title>Avocado Toast</title>
     </head>
+
+    <body>
+        <h1>Don't roll your eyes at me Avocado Toast</h1>
+        <img src="../pictures/avocadotoast.jpeg" alt="A slice of whole grain bread with smashed avocado, salt, and pepper">
+
+        <h3>Description</h3>
+        <p>I know what you're thinking. Avocado toast? In this economy? I agree circumstances aren't optimal to be treating yourself,
+            however, I assure you that this is a relatively low cost method of consuming such delicacies. When you have it from home, each instance
+            of this meal comes out to only about $2-3 in 2023... Let's just hope it stays that way. Anyways, it's super quick to make, healthy, and quite tasty.
+        </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Avocado</li>
+            <li>Sliced Bread</li>
+            <li>Salt & Pepper</li>
+            <li>(Optional) Egg</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Toss your bread into the toaster</li>
+            <li>Slice open your avocado and pit it</li>
+            <li>Grab a spoon and scoop out your avocado onto a cutting board</li>
+            <li>Take two forks and mash your avocado to your preferred crushed level (I like mine kinda chunky)</li>
+            <li>Once the toast pops up, place it on the cutting board and transfer your avocado atop it</li>
+            <li>Season with salt and pepper</li>
+            <li>(Optional) If you'd like to add more substance to this meal, fry and egg sunny side up and place atop the avocado</li>
+            <li>Enjoy</li>
+        </ol>
+    </body>
 </html>
