Add CSS styles with minor HTML structural changes
Add divs with various classes to html for the different sections of the webpages.
Class "image" for section regarding img's alignment.
Class "picture" to regulate sizing of all pictures for each recipes.
Class "segments" for each other section for the webpage (Ingredients & Steps).
Add color scheme for all webpages.
Add margin and padding to align and separate sections of the page.
Add specific properties to different header elements.

--- a/recipes/avocado_toast.html
+++ b/recipes/avocado_toast.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Avocado Toast</title>
+        <link rel="stylesheet" type="text/css" href="../style.css">
     </head>
 
     <body>
         <h1>Don't roll your eyes at me Avocado Toast</h1>
-        <img src="../pictures/avocadotoast.jpeg" alt="A slice of whole grain bread with smashed avocado, salt, and pepper">
 
-        <h3>Description</h3>
+        <div class="image">
+            <img src="../pictures/avocadotoast.jpeg" alt="A slice of whole grain bread with smashed avocado, salt, and pepper" id="picture">
+        </div>
+        
+    <div class="segments">
+        <h3>It's a HEALTHY fat!</h3>
         <p>I know what you're thinking. Avocado toast? In this economy? I agree circumstances aren't optimal to be treating yourself,
             however, I assure you that this is a relatively low cost method of consuming such delicacies. When you have it from home, each instance
             of this meal comes out to only about $2-3 in 2023... Let's just hope it stays that way. Anyways, it's super quick to make, healthy, and quite tasty.
@@ -22,7 +27,9 @@
             <li>Salt & Pepper</li>
             <li>(Optional) Egg</li>
         </ul>
+    </div>
 
+    <div class="segments">
         <h2>Steps</h2>
         <ol>
             <li>Toss your bread into the toaster</li>
@@ -34,5 +41,6 @@
             <li>(Optional) If you'd like to add more substance to this meal, fry and egg sunny side up and place atop the avocado</li>
             <li>Enjoy</li>
         </ol>
+    </div>
     </body>
 </html>
