--- a/recipes/chicken_salad.html
+++ b/recipes/chicken_salad.html
@@ -3,44 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Chicken Salad</title>
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
     <h1>Tommy's Simple Chicken Salad</h1>
-    <img src="../pictures/chickensaladontoast.jpeg" alt="Creamy chicken salad atop a slice of lettuce that sits on a slice of whole grain bread">
+    <div class="image">
+        <img src="../pictures/chickensaladontoast.jpeg" alt="Creamy chicken salad atop a slice of lettuce that sits on a slice of whole grain bread" id="picture">
+    </div>
 
-    <h3>Simple Chicken Salad for the health conscious</h3>
-    <p>If you're anything like Tommy, you're always thinking of creative ways to consume lots of protein in a tasty, healthy, yet frugal fashion.
-        This recipe doesn't require a whole lot, contains relatively cheap ingredients, and needs very little preparation. 
-        Despite that, a few key ingredients really make this chicken salad pop.
-        Personally, I like to put it between lettuce and whole grain bread.
-    </p>
+    <div class="segments">
+        <h3>Simple Chicken Salad for the health conscious</h3>
+        <p>If you're anything like Tommy, you're always thinking of creative ways to consume lots of protein in a tasty, healthy, yet frugal fashion.
+            This recipe doesn't require a whole lot, contains relatively cheap ingredients, and needs very little preparation. 
+            Despite that, a few key ingredients really make this chicken salad pop.
+            Personally, I like to put it between lettuce and whole grain bread.
+        </p>
+    </div>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 Costco Canned Chicken</li>
-        <li>1 Stalk of Celery</li>
-        <li>1/2 of a White Onion</li>
-        <li>Duke's Mayonaise</li>
-        <li>Tarragon</li>
-        <li>Apple Cider Vinegar</li>
-        <li>Salt & Pepper</li>
-        <li>(Optional) Walnuts or Almonds</li>
-    </ul>
 
-    <h2>Steps</h2>
-    <ol>
-        <li>Wash celery thoroughly and ready your cutting board and a large bowl</li>
-        <li>Chop your celery as thin as you can and toss them into your bowl</li>
-        <li>Dice your onion half and also throw that into your bowl</li>
-        <li>Open your Costco canned chicken and strain all of the juices into the sink</li>
-        <li>Toss your chicken into the bowl and add a heaping tablespoon of Duke's mayo as well</li>
-        <li>Add in about a tablespoon of apple cider vinegar and a teaspoon of salt and pepper</li>
-        <li>Sprinkle tarragon generously</li>
-        <li>(Optional) If you have walnuts or almonds, grab a handful, chop them up, and then toss them into the bowl as well</li>
-        <li>Mix the ingredients together until homogenous *note* you may need to add more mayonaise to ease mixing</li>
-        <li>Don't forget to taste when it's all together. Usually there needs to be more salt and pepper as well as vingear</li>
-        <li>Enjoy</li>
-    </ol>
+    <div class="segments">
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 Costco Canned Chicken</li>
+            <li>1 Stalk of Celery</li>
+            <li>1/2 of a White Onion</li>
+            <li>Duke's Mayonaise</li>
+            <li>Tarragon</li>
+            <li>Apple Cider Vinegar</li>
+            <li>Salt & Pepper</li>
+            <li>(Optional) Walnuts or Almonds</li>
+        </ul>
+    </div>
+
+    <div class="segments">
+        <h2>Steps</h2>
+        <ol>
+            <li>Wash celery thoroughly and ready your cutting board and a large bowl</li>
+            <li>Chop your celery as thin as you can and toss them into your bowl</li>
+            <li>Dice your onion half and also throw that into your bowl</li>
+            <li>Open your Costco canned chicken and strain all of the juices into the sink</li>
+            <li>Toss your chicken into the bowl and add a heaping tablespoon of Duke's mayo as well</li>
+            <li>Add in about a tablespoon of apple cider vinegar and a teaspoon of salt and pepper</li>
+            <li>Sprinkle tarragon generously</li>
+            <li>(Optional) If you have walnuts or almonds, grab a handful, chop them up, and then toss them into the bowl as well</li>
+            <li>Mix the ingredients together until homogenous *note* you may need to add more mayonaise to ease mixing</li>
+            <li>Don't forget to taste when it's all together. Usually there needs to be more salt and pepper as well as vingear</li>
+            <li>Enjoy</li>
+        </ol>
+    </div>
 </body>
 </html>
