--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -3,19 +3,25 @@
     <head>
         <meta charset ="UTF-8">
         <title>Steak</title>
+        <link rel="stylesheet" type="text/css" href="../style.css">
     </head>
 
     <body>
         <h1>Easy From Frozen Steak</h1>
-        <img src="../pictures/juicysteak.jpeg" alt="Juicy medium well steak on a wooden cutting board">
-
+        <div class="image">
+            <img src="../pictures/juicysteak.jpeg" alt="Juicy medium well steak on a wooden cutting board" id="picture">
+        </div>
+        
+    <div class="segments">
         <h3>Easy delicious steak for those afraid of groceries going bad</h3>
         <p>I don't buy steak often anymore due to the recent hike in meat prices. But when I do, I want to make sure
             that they never go bad. It's happened a few times before and everytime I cry a little on the inside (sometimes on the outside too).
             I find that the only way to prevent this from happening is to freeze it. For a while, it was always a headache to thaw it out the night before,
             but with this technique, I just need 2-3 hours to get it from frozen to inside my belly.
         </p>
+    </div>
 
+    <div class="segments">
         <h2>Ingredients</h2>
         <ul>
             <li>Frozen Steak</li>
@@ -25,7 +31,9 @@
             <li>Salt & Pepper</li>
             <li>Dried Rosemary or Thyme</li>
         </ul>
+    </div>
 
+    <div class="segments">
         <h2>Steps</h2>
         <ol>
             <li>Preheat your oven to 175-180 degrees f</li>
@@ -44,5 +52,6 @@
             <li>Extract the steak and place on a cutting board to rest for 7-8 minutes</li>
             <li>Enjoy</li>
         </ol>
+    </div>
     </body>
 </html>
