Add vertical margins to new "content" class
Add new content class to <p>, <ul>, and <ol> sections.
Create a descendant combinator selector that targets elements
with the class "content" with the parent "segments".
Add a 60px bottom margin to new descendant combinator selector.

--- a/recipes/avocado_toast.html
+++ b/recipes/avocado_toast.html
@@ -15,13 +15,13 @@
         
     <div class="segments">
         <h3>It's a HEALTHY fat!</h3>
-        <p>I know what you're thinking. Avocado toast? In this economy? I agree circumstances aren't optimal to be treating yourself,
+        <p class="content">I know what you're thinking. Avocado toast? In this economy? I agree circumstances aren't optimal to be treating yourself,
             however, I assure you that this is a relatively low cost method of consuming such delicacies. When you have it from home, each instance
             of this meal comes out to only about $2-3 in 2023... Let's just hope it stays that way. Anyways, it's super quick to make, healthy, and quite tasty.
         </p>
 
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="content">
             <li>Avocado</li>
             <li>Sliced Bread</li>
             <li>Salt & Pepper</li>
@@ -31,7 +31,7 @@
 
     <div class="segments">
         <h2>Steps</h2>
-        <ol>
+        <ol class="content">
             <li>Toss your bread into the toaster</li>
             <li>Slice open your avocado and pit it</li>
             <li>Grab a spoon and scoop out your avocado onto a cutting board</li>
