--- a/recipes/chicken_salad.html
+++ b/recipes/chicken_salad.html
@@ -14,7 +14,7 @@
 
     <div class="segments">
         <h3>Simple Chicken Salad for the health conscious</h3>
-        <p>If you're anything like Tommy, you're always thinking of creative ways to consume lots of protein in a tasty, healthy, yet frugal fashion.
+        <p class="content"> If you're anything like Tommy, you're always thinking of creative ways to consume lots of protein in a tasty, healthy, yet frugal fashion.
             This recipe doesn't require a whole lot, contains relatively cheap ingredients, and needs very little preparation. 
             Despite that, a few key ingredients really make this chicken salad pop.
             Personally, I like to put it between lettuce and whole grain bread.
@@ -24,7 +24,7 @@
 
     <div class="segments">
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="content">
             <li>1 Costco Canned Chicken</li>
             <li>1 Stalk of Celery</li>
             <li>1/2 of a White Onion</li>
@@ -38,7 +38,7 @@
 
     <div class="segments">
         <h2>Steps</h2>
-        <ol>
+        <ol class="content">
             <li>Wash celery thoroughly and ready your cutting board and a large bowl</li>
             <li>Chop your celery as thin as you can and toss them into your bowl</li>
             <li>Dice your onion half and also throw that into your bowl</li>
