--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -14,7 +14,7 @@
         
     <div class="segments">
         <h3>Easy delicious steak for those afraid of groceries going bad</h3>
-        <p>I don't buy steak often anymore due to the recent hike in meat prices. But when I do, I want to make sure
+        <p class="content">I don't buy steak often anymore due to the recent hike in meat prices. But when I do, I want to make sure
             that they never go bad. It's happened a few times before and everytime I cry a little on the inside (sometimes on the outside too).
             I find that the only way to prevent this from happening is to freeze it. For a while, it was always a headache to thaw it out the night before,
             but with this technique, I just need 2-3 hours to get it from frozen to inside my belly.
@@ -23,7 +23,7 @@
 
     <div class="segments">
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="content">
             <li>Frozen Steak</li>
             <li>High Smokepoint Oil</li>
             <li>Butter</li>
@@ -35,7 +35,7 @@
 
     <div class="segments">
         <h2>Steps</h2>
-        <ol>
+        <ol class="content">
             <li>Preheat your oven to 175-180 degrees f</li>
             <li>Place your frozen steak on a wire rack atop a baking sheet</li>
             <li>Toss in the steak and set a timer for an hour and a half</li>
